css/expo.css
/* ---------- HEADER PROPERTIES ---------- */

header#heading-expo {
    background-image: url(../img/bg.jpg);
    color: #fff;
}

header .intro-text {
    padding-top: 100px;
    }

header .intro-text .intro-heading {
    font-weight: 600;
    font-size: 25px;
    line-height: 30px;
    margin-bottom: 30px;
    letter-spacing: -1px;
}

header .intro-text .intro-description {
    font-weight: 100;
    font-size: 18px;
    line-height: 25px;
    margin-bottom: 35px;
    padding-left: 20px;
    padding-right: 20px;
}

@media (min-width:768px) {
    header .intro-text {
        padding-top: 150px;
    }

    header .intro-text .intro-heading {
        font-size: 35px;
        line-height: 38px;
        margin-bottom: 24px;
    }
}

@media (min-width:1024px) {
    header .intro-text {
        padding-top: 180px;
    }

    header .intro-text .intro-heading {
        font-weight: 700;
        line-height: 40px;
    }

    header .intro-text .intro-description {
        font-weight: 200;
        font-size: 24px;
        line-height: 30px;
        margin-bottom: 35px;
    }  
}

